[package]
name = "zk-paillier"
version = "0.4.0"
edition = "2018"
description = "Collection of Paillier cryptosystem zero knowledge proofs written in Rust"
license = "GPL-3.0-or-later"
repository = "https://github.com/ZenGo-X/zk-paillier"
categories = ["cryptography", "algorithms"]
keywords = ["paillier", "homomorphic", "encryption", "zero-knowledge", "cryptoagorithms"]

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]

[lib]
crate-type = ["lib"]

[dependencies]
rand = { git = "https://github.com/mesalock-linux/rand-sgx" } #"0.6"
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
#rayon = "1.1"
bit-vec = { version = "0.6", git  = "https://github.com/sgx-test/bit-vec" } #git  = "https://github.com/sgx-test/bit-vec"
sha2 = { version = "0.8.0", git  = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
digest = { version = "0.8.1", git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
thiserror = { version = "1", git = "https://github.com/mesalock-linux/thiserror-sgx" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.curv]
#package = "curv-kzen"
version = "0.7"
git = "https://github.com/sgx-test/curv-sgx"
#default-features = false

[dependencies.paillier]
#package = "kzen-paillier"
branch = "0.3.10-sgx"
git = "https://github.com/sgx-test/rust-paillier-sgx"
#version = "0.4"
#default-features = false

#[dev-dependencies]
#criterion = "0.3"

[features]
default = ["mesalock_sgx","curv/num-bigint"]
mesalock_sgx = ["sgx_tstd"]

[[bench]]
name = "all"
harness = false
