[package]
name = "zk-paillier"
version = "0.3.12"
edition = "2018"

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = ["paillier", "zero knowledge"]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
rand = { git = "https://github.com/mesalock-linux/rand-sgx" } #"0.6"
serde = { version = "1.0", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
#rayon = "1.1"
bit-vec = { version = "0.6", git  = "https://github.com/sgx-test/bit-vec" } #git  = "https://github.com/sgx-test/bit-vec"
sha2 = { version = "0.8.0", git  = "https://github.com/mesalock-linux/rustcrypto-hashes-sgx" }
digest = { version = "0.8.1", git = "https://github.com/mesalock-linux/rustcrypto-traits-sgx" }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.curv]
version = "0.7"
git = "https://github.com/sgx-test/curv-sgx"
features = ["num-bigint"]
#default-features = false

[dependencies.paillier]
#package = "kzen-paillier"
branch = "0.3.10-sgx"
git = "https://github.com/sgx-test/rust-paillier-sgx"
#default-features = false

#[dev-dependencies]
#criterion = "0.3"

[features]
default = ["mesalock_sgx","curv/num-bigint"]
mesalock_sgx = ["sgx_tstd"]

[[bench]]
name = "all"
harness = false
