[package]
name = "zk-paillier"
version = "0.3.12"
edition = "2018"

authors = [
    "Gary <gary@kzencorp.com>",
    "Morten Dahl <mortendahlcs@gmail.com>",
    "Omer <omer.shlomovits@gmail.com>"
]
keywords = ["paillier", "zero knowledge"]

license = "GPL-3.0-or-later"
categories = ["cryptography"]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.1"
bit-vec = "0.6"
sha2 = "0.8.0"
digest = "0.8.1"
curv = { git = "https://github.com/sgx-test/curv-sgx", branch = "0.7.0-generic", version = "0.7", default-features = false }

[dependencies.paillier]
git = "https://github.com/sgx-test/rust-paillier-sgx"
branch = "0.3.10-generic"
#tag = "v0.3.10"
default-features = false

[dependencies.openssl]
version = "0.10.57"

[dependencies.num-bigint]
version = "0.4"
features = ["serde"]

[dependencies.num-integer]
version = "0.1"

[dependencies.num-traits]
version = "0.2"

[dev-dependencies]
criterion = "0.3"

[features]
default = ["curv/rust-gmp-kzen"]
parallel = []
wasm = ["rand/wasm-bindgen", "curv/big-num"]

[[bench]]
name = "all"
harness = false
